--- a/config/locales/fin.yml
+++ b/config/locales/fin.yml
@@ -184,3 +184,8 @@ fin:
     "Ei muutettu"
   move_basket_rejected:
     "Hylätty"
+
+  filter_ideas:
+    "Suodata ideat"
+  filter:
+    "Suodata"
