Show awaiting comments for moderators

--- a/config/locales/swedish.yml
+++ b/config/locales/swedish.yml
@@ -8,7 +8,7 @@ swe:
 
   ideas:
     "Idéer"
-  
+
   ideas_by_user:
     "Idéer som lämnats in av"
 
@@ -17,7 +17,7 @@ swe:
 
   should_be_signed:
     "Du måste vara inloggad"
-  
+
   create:
     "har skapats"
 
@@ -29,55 +29,58 @@ swe:
 
   update:
     "uppdaterad med success"
-  
+
   destroy:
     "tagits bort"
-  
+
   comment:
     "Komment"
-  
+
   comments:
     "Kommentarer"
 
+  waits_publish:
+    "väntar publiceer"
+
   history:
     "Historia"
-  
+
   idea:
     "Idé"
-  
+
   idea_moderation_enable:
     "Moderation aktiverat"
-  
+
   idea_moderation_disable:
     "Moderation inaktiverad"
 
   comment_moderation_enable:
     "Kommentarer moderation aktiverat"
-  
+
   comment_moderation_disable:
     "Kommentarer moderation inaktiverad"
-  
+
   listing_comments:
     "Notering commentater"
-  
+
   like:
     "Gilla"
-  
+
   destroy_only_own_like:
     "Du kan bara förstöra egna gillar"
 
   tag:
     "Märke"
-    
+
   tags:
     "Märker"
-  
+
   user:
     "Användare"
-  
+
   are_you_sure:
     "Är du säker?"
-   
+
   show:
     "Visa"
 
@@ -87,7 +90,7 @@ swe:
   delete:
     "Radera"
 
-    
+
   edit:
     "Edera"
 
@@ -96,10 +99,10 @@ swe:
 
   time:
     "Tid"
-   
+
   text:
     "Text"
-    
+
   post_idea:
     "Post idé"
 
@@ -117,7 +120,7 @@ swe:
     "Inte förändrad idéer"
   basket_rejected:
     "Avvisade idéer"
-    
+
   # buttons
 
   move_to:
@@ -125,22 +128,22 @@ swe:
 
   publish_button:
     "Publicera"
-  
+
   unpublish_button:
     "Avpublicera"
-  
-  login_button: 
+
+  login_button:
     "Logga in"
 
   logout_button:
     "Logga ut"
-      
+
   publish_and_moderate_button:
     "Publicera med moderation"
-      
+
   reject_button:
     "Avvisa"
-  
+
    # Move to basket buttons
 
   move_basket_new:
@@ -161,7 +164,7 @@ swe:
     ""
   filter:
     ""
-    
+
   topic:
     "Ämne"
   date:
@@ -176,7 +179,6 @@ swe:
 
   faq_topic:
     "Vanliga Fragor"
-    
+
   faq_button:
     "FAQ"
-
