--- a/config/locales/finnish.yml
+++ b/config/locales/finnish.yml
@@ -51,7 +51,7 @@ fin:
 
   ideas:
     "Ideat"
-  
+
   ideas_by_user:
     "Ideat, jotka on luonut"
 
@@ -60,7 +60,7 @@ fin:
 
   should_be_signed:
     "Sinun pitää olla kirjautunut sisään"
-  
+
   create:
     "luotiin onnistuneesti"
 
@@ -69,7 +69,7 @@ fin:
 
   publish:
     "julkaistu onnistuneesti"
-  
+
   update:
     "päivitetty onnistuneesti"
 
@@ -82,6 +82,9 @@ fin:
   comments:
     "Kommentit"
 
+  waits_publish:
+    "odottaa julkaisua"
+
   history:
     "Historia"
 
@@ -90,37 +93,37 @@ fin:
 
   idea_moderation_enable:
     "Moderointi päälle"
-  
+
   idea_moderation_disable:
     "Moderointi pois"
-  
+
   comment_moderation_enable:
     "Kommenttien moderointi päällä"
-  
+
   comment_moderation_disable:
     "Kommenttien moderointi pois päältä"
-  
+
   listing_comments:
     "Kommenttien listaus"
-  
+
   like:
     "Tykkäys"
-  
+
   destroy_only_own_like:
     "Voit tuhota vain omia tykkäyksiä"
-  
+
   tag:
     "Tägi"
-  
+
   tags:
     "Tägit"
-  
+
   user:
     "Käyttäjä"
 
   are_you_sure:
     "Oletko varma?"
-   
+
   show:
     "Näytä"
 
@@ -129,19 +132,19 @@ fin:
 
   delete:
     "Poista"
-    
+
   edit:
     "Muokkaa"
-  
+
   new:
     "Uusi"
-  
+
   time:
     "Aika"
-  
+
   text:
     "Teksti"
-  
+
   post_idea:
     "Lisää idea"
 
@@ -159,7 +162,7 @@ fin:
     "Ei muutetut ideat"
   basket_rejected:
     "Hylätyt ideat"
-  
+
   # buttons
 
   move_to:
@@ -167,22 +170,22 @@ fin:
 
   publish_button:
     "Julkaise"
-  
+
   unpublish_button:
     "Piilota"
-    
-  login_button: 
+
+  login_button:
     "Kirjaudu sisään"
 
   logout_button:
     "Kirjaudu ulos"
-    
+
   publish_and_moderate_button:
     "Julkaise moderoituna"
-  
+
   reject_button:
     "Hylkää"
-  
+
    # Move to basket buttons
 
   move_basket_new:
@@ -211,7 +214,6 @@ fin:
 
   faq_topic:
     "Usein kysytyt kysymykset"
-    
+
   faq_button:
     "UKK"
-
