New idea forms has translations

--- a/config/locales/english.yml
+++ b/config/locales/english.yml
@@ -194,3 +194,14 @@ en:
 
   faq_button:
     "FAQ"
+
+  # New idea texts
+
+  topic:
+    "Topic"
+  text:
+    "Text"
+  tags:
+    "Tags"
+  create_idea:
+    "Create idea"
