--- a/config/locales/finnish.yml
+++ b/config/locales/finnish.yml
@@ -217,3 +217,13 @@ fin:
 
   faq_button:
     "UKK"
+
+   # New idea texts
+  topic:
+    "Otsikko"
+  text:
+    "Teksti"
+  tags:
+    "Tägit"
+  create_idea:
+    "Luo idea"
