New idea forms has translations

--- a/config/locales/english.yml
+++ b/config/locales/english.yml
@@ -192,3 +192,13 @@ en:
   faq_button:
     "FAQ"
 
+  # New idea texts
+
+  topic:
+    ""
+  text:
+    ""
+  tags:
+    ""
+  create_idea:
+    ""
