--- a/config/locales/swedish.yml
+++ b/config/locales/swedish.yml
@@ -1,181 +1,194 @@
 swe:
-  hello: "Hejsan wärld"
+        hello: "Hejsan wärld"
 
-  greeting: "Välkommen till HYDEA-service!"
+        greeting: "Välkommen till HYDEA-service!"
 
-  test:
-    "EXEMPEL"
+        test:
+                "EXEMPEL"
 
-  ideas:
-    "Idéer"
+        ideas:
+                "Idéer"
 
-  ideas_by_user:
-    "Idéer som lämnats in av"
+        ideas_by_user:
+                "Idéer som lämnats in av"
 
-  users:
-    "Användare"
+        users:
+                "Användare"
 
-  should_be_signed:
-    "Du måste vara inloggad"
+        should_be_signed:
+                "Du måste vara inloggad"
 
-  create:
-    "har skapats"
+        create:
+                "har skapats"
 
-  moderated_publish:
-    "ska publicera efter moderation"
+        moderated_publish:
+                "ska publicera efter moderation"
 
-  publish:
-    "publicerad med success"
+        publish:
+                "publicerad med success"
 
-  update:
-    "uppdaterad med success"
+        update:
+                "uppdaterad med success"
 
-  destroy:
-    "tagits bort"
+        destroy:
+                "tagits bort"
 
-  comment:
-    "Komment"
+        comment:
+                "Komment"
 
-  comments:
-    "Kommentarer"
+        comments:
+                "Kommentarer"
 
-  history:
-    "Historia"
+        waits_publish:
+                "väntar publiceer"
 
-  idea:
-    "Idé"
+        history:
+                "Historia"
 
-  idea_moderation_enable:
-    "Moderation aktiverat"
+        idea:
+                "Idé"
 
-  idea_moderation_disable:
-    "Moderation inaktiverad"
+        idea_moderation_enable:
+                "Moderation aktiverat"
 
-  comment_moderation_enable:
-    "Kommentarer moderation aktiverat"
+        idea_moderation_disable:
+                "Moderation inaktiverad"
 
-  comment_moderation_disable:
-    "Kommentarer moderation inaktiverad"
+        comment_moderation_enable:
+                "Kommentarer moderation aktiverat"
 
-  listing_comments:
-    "Notering commentater"
+        comment_moderation_disable:
+                "Kommentarer moderation inaktiverad"
 
-  like:
-    "Gilla"
+        listing_comments:
+                "Notering commentater"
 
-  destroy_only_own_like:
-    "Du kan bara förstöra egna gillar"
+        like:
+                "Gilla"
 
-  tag:
-    "Märke"
+        destroy_only_own_like:
+                "Du kan bara förstöra egna gillar"
 
-  tags:
-    "Märker"
+        tag:
+                "Märke"
 
-  user:
-    "Användare"
+        tags:
+                "Märker"
 
-  are_you_sure:
-    "Är du säker?"
+        user:
+                "Användare"
 
-  show:
-    "Visa"
+        are_you_sure:
+                "Är du säker?"
 
-  back:
-    "Tillbaka"
+        show:
+                "Visa"
 
-  delete:
-    "Radera"
+        back:
+                "Tillbaka"
 
-
-  edit:
-    "Edera"
-
-  new:
-    "Ny"
-
-  time:
-    "Tid"
-
-  text:
-    "Text"
-
-  post_idea:
-    "Post idé"
-
-#Basket names
-
-  basket_new:
-    "Nya idéer"
-  basket_approved:
-    "Godkänd idéer"
-  basket_changing:
-    "Jobbar på denna idéer"
-  basket_changed:
-    "Ändrats idéer"
-  basket_not_changed:
-    "Inte förändrad idéer"
-  basket_rejected:
-    "Avvisade idéer"
-
-  # buttons
-
-  move_to:
-    "Flytta till"
-
-  publish_button:
-    "Publicera"
-
-  unpublish_button:
-    "Avpublicera"
-
-  login_button:
-    "Logga in"
-
-  logout_button:
-    "Logga ut"
-
-  publish_and_moderate_button:
-    "Publicera med moderation"
-
-  reject_button:
-    "Avvisa"
-
-   # Move to basket buttons
-
-  move_basket_new:
-    "Nya"
-  move_basket_approved:
-    "Godkänd"
-  move_basket_changing:
-    "Jobbar på denna"
-  move_basket_changed:
-    "Ändrats"
-  move_basket_not_changed:
-    "Inte förändrad"
-  move_basket_rejected:
-    "Avvisa"
-
-  filter_ideas:
-    ""
-  filter:
-    ""
+        delete:
+                "Radera"
 
 
-  you_are_banned:
-    ""
+        edit:
+                "Edera"
 
-  topic:
-    "Ämne"
-  date:
-    "Datum"
-  likes:
-    "Likt"
+        new:
+                "Ny"
 
-  #FAQ
+        time:
+                "Tid"
 
-  faq_topic:
-    "Vanliga Fragor"
+        text:
+                "Text"
 
-  faq_button:
-    "FAQ"
+        post_idea:
+                "Post idé"
+
+                #Basket names
+
+        basket_new:
+                "Nya idéer"
+        basket_approved:
+                "Godkänd idéer"
+        basket_changing:
+                "Jobbar på denna idéer"
+        basket_changed:
+                "Ändrats idéer"
+        basket_not_changed:
+                "Inte förändrad idéer"
+        basket_rejected:
+                "Avvisade idéer"
+
+                # buttons
+
+        move_to:
+                "Flytta till"
+
+        publish_button:
+                "Publicera"
+
+        unpublish_button:
+                "Avpublicera"
+
+        login_button:
+                "Logga in"
+
+        logout_button:
+                "Logga ut"
+
+        publish_and_moderate_button:
+                "Publicera med moderation"
+
+        reject_button:
+                "Avvisa"
+
+                # Move to basket buttons
+
+        move_basket_new:
+                "Nya"
+        move_basket_approved:
+                "Godkänd"
+        move_basket_changing:
+                "Jobbar på denna"
+        move_basket_changed:
+                "Ändrats"
+        move_basket_not_changed:
+                "Inte förändrad"
+        move_basket_rejected:
+                "Avvisa"
+
+
+        filter_ideas:
+                ""
+        filter:
+                ""
+
+        topic:
+                "Ämne"
+        date:
+                "Datum"
+        likes:
+                "Likt"
+
+        you_are_banned:
+                ""
+
+                #FAQ
+
+        faq_topic:
+                "Vanliga Fragor"
+
+        faq_button:
+                "FAQ"
+
+                # New idea texts
+        topic:
+                ""
+        text:
+                ""
+        tags:
+                ""
+        create_idea:
+                ""
