--- a/config/locales/english.yml
+++ b/config/locales/english.yml
@@ -195,10 +195,10 @@ en:
   # New idea texts
 
   topic:
-    ""
+    "Topic"
   text:
-    ""
+    "Text"
   tags:
-    ""
+    "Tags"
   create_idea:
-    ""
+    "Create idea"
