Localize comment button

--- a/config/locales/swedish.yml
+++ b/config/locales/swedish.yml
@@ -84,6 +84,9 @@ swe:
         show:
                 "Visa"
 
+        send:
+                "Sända"
+
         back:
                 "Tillbaka"
 
