--- a/config/locales/english.yml
+++ b/config/locales/english.yml
@@ -1,24 +1,3 @@
-# Files in the config/locales directory are used for internationalization
-# and are automatically loaded by Rails. If you want to use locales other
-# than English, add the necessary files in this directory.
-#
-# To use the locales, use `I18n.t`:
-#
-#     I18n.t 'hello'
-#
-# In views, this is aliased to just `t`:
-#
-#     <%= t('hello') %>
-#
-# To use a different locale, set it with `I18n.locale`:
-#
-#     I18n.locale = :es
-#
-# This would use the information in config/locales/es.yml.
-#
-# To learn more, please read the Rails Internationalization guide
-# available at http://guides.rubyonrails.org/i18n.html.
-
 en:
   hello: "Hello world"
 
@@ -32,6 +11,7 @@ en:
 
   ideas_by_user:
     "Ideas submitted by"
+
   users:
     "Users"
 
@@ -128,7 +108,7 @@ en:
   post_idea:
     "Post idea"
 
-  #Basket names
+#Basket names
 
   basket_new:
     "New ideas"
@@ -143,7 +123,7 @@ en:
   basket_rejected:
     "Rejected ideas"
 
-  # buttons
+# buttons
 
   move_to:
     "Move to"
@@ -166,7 +146,7 @@ en:
   reject_button:
     "Reject"
 
-  # Move to basket buttons
+# Move to basket buttons
 
   move_basket_new:
     "New"
@@ -190,7 +170,7 @@ en:
   you_are_banned:
     "You are banned"
 
-  #FAQ
+#FAQ
 
   faq_topic:
     "Frequently asked questions"
@@ -198,7 +178,7 @@ en:
   faq_button:
     "FAQ"
 
-  # New idea texts
+# New idea texts
 
   topic:
     "Topic"
@@ -208,3 +188,10 @@ en:
     "Tags"
   create_idea:
     "Create idea"
+#sort
+  topic:
+    "Topic"
+  date:
+    "Date"
+  likes:
+    "Likes"
