Move export link

--- a/config/locales/english.yml
+++ b/config/locales/english.yml
@@ -202,3 +202,16 @@ en:
     "Tags"
   create_idea:
     "Create idea"
+
+#sort
+  topic:
+    "Topic"
+  date:
+    "Date"
+  likes:
+    "Likes"
+
+# export
+  export:
+    "Export to file"
+
