Translate basket names in Show Idea

--- a/config/locales/english.yml
+++ b/config/locales/english.yml
@@ -206,4 +206,20 @@ en:
   export:
     "Export to file"
 
+  New:
+    "New"
+  
+  Approved:
+    "Approved"
 
+  Changing:
+    "Changing"
+  
+  Changed:
+    "Changed"
+
+  Not Changed:
+    "Not Changed"
+  
+  Rejected:
+    "Rejected"
