--- a/config/locales/finnish.yml
+++ b/config/locales/finnish.yml
@@ -189,11 +189,11 @@ fin:
     "Luo idea"
 
 # Sort
-  topic:
+  topic_sort:
     "Otsikko"
-  date:
+  date_sort:
     "Aika"
-  likes:
+  likes_sort:
     "Tykkäykset"
 
 
