--- a/config/locales/swedish.yml
+++ b/config/locales/swedish.yml
@@ -16,6 +16,11 @@ swe:
 
     ideas_by_user:
         "Idéer som lämnats in av"
+    user_own_ideas:
+      "Idéer skapade av dig"
+
+    users:
+      "Användare"
 
     users:
         "Användare"
