--- a/config/locales/swedish.yml
+++ b/config/locales/swedish.yml
@@ -225,3 +225,24 @@ swe:
       "Taggar"
     create_idea:
       "Skapa idé"  #HUOM!  Suomenkielisessä listassa on lopuksi liuta komentoja, joita eivät esiinny eng-versiossa, eikä myöskään tässä. Niitä siis ei käännetä, vai?
+ 
+    New:		
+      "Ny"		
+  		
+    Approved:		
+     "Godkänd"		
+ 		
+    Changing:		
+      "Under arbete"		
+    		
+    Changed:		
+      "Ändrats"		
+  		
+    Not Changed:		
+      "Inte ändrats"		
+    		
+    Rejected:		
+      "Avvisad"		
+  		
+    no_ideas:		
+      "Det finns ingen idéer här. Kom senare tillbaka."
