Banned text localized

--- a/config/locales/english.yml
+++ b/config/locales/english.yml
@@ -171,7 +171,7 @@ en:
     "Filter"
 
   you_are_banned:
-    "You are banned"
+    "You are banned. Please contact hallitus@hyy.fi for more information."
 
 #FAQ
 
