--- a/config/locales/finnish.yml
+++ b/config/locales/finnish.yml
@@ -171,7 +171,7 @@ fin:
     "Suodata"
 
   you_are_banned:
-    "Käyttöoikeus estetty"
+    "Käyttöoikeus estetty. Ota yhteyttä hallitus@hyy.fi saadaksesi lisää tietoa."
 
 #FAQ
 
