--- a/config/locales/swedish.yml
+++ b/config/locales/swedish.yml
@@ -171,7 +171,7 @@ swe:
     ""
 
   you_are_banned:
-    ""
+    "Du har fått användningsförbud. Kontakt hallitus@hyy.fi för mera information."
 
 #FAQ
 
