--- a/config/locales/english.yml
+++ b/config/locales/english.yml
@@ -4,7 +4,7 @@ en:
   home_page:
     "Home page"
 
-  greeting: "Welcome to HYDEA-service!"
+  greeting: "Welcome to Ideoi service!"
 
   test:
     "EXAMINATION"
