--- a/config/locales/finnish.yml
+++ b/config/locales/finnish.yml
@@ -1,7 +1,7 @@
 fin:
   hello: "Terve Maailma!"
 
-  greeting: "Tervetuloa HYDEA-palveluun!"
+  greeting: "Tervetuloa Ideoi-palveluun!"
 
   home_page:
     "Etusivu"
