--- a/config/locales/swedish.yml
+++ b/config/locales/swedish.yml
@@ -3,7 +3,7 @@ swe:
         "Hej världen!"
 
     greeting:
-        "Välkommen till HYDEA!"
+        "Välkommen till Ideoi!"
 
     test:
         "EXEMPEL"
